# dbt-llm-agent

./: .dockerignore  .env.example  .gitignore  .ragstarrules.yml  .slack_manifest.example.json  .slack_manifest.example.yml  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  setup.sh
.cursor/rules/: general-context-and-instructions.mdc
apps/core/: models.py  urls.py  views.py
apps/data_sources/: services.py
apps/embeddings/: models.py  services.py
apps/integrations/: urls.py
apps/knowledge_base/: admin.py  models.py  urls.py  views.py
apps/llm_providers/: services.py
apps/workflows/: admin.py  models.py  rules_loader.py  services.py  urls.py  views.py
backend_django/: Dockerfile  manage.py  pyproject.toml
backend_django/apps/accounts/: SECRET_MANAGEMENT.md  admin.py  apps.py  llm_constants.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend_django/apps/accounts/management/commands/: show_timezone.py  test_secrets.py
backend_django/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_email.py  0004_organisationsettings.py  0005_rename_llm_api_key_organisationsettings_llm_anthropic_api_key_and_more.py  0006_organisationsettings_metabase_api_key_and_more.py  0007_organisationsettings_enabled_integrations.py  0008_organisationsettings_slack_team_id.py  0009_remove_organisationsettings_enabled_integrations_and_more.py  0010_fix_model_uniqueness_constraints.py  0011_convert_secrets_to_parameter_paths.py  0012_alter_organisationsettings_llm_anthropic_api_key_path_and_more.py
backend_django/apps/core/: admin.py  serializers.py
backend_django/apps/core/management/commands/: version.py
backend_django/apps/data_sources/: apps.py  dashboard_api.py  models.py  serializers.py  services.py  services.py:627  tasks.py  urls.py  views.py
backend_django/apps/data_sources/management/commands/: init_project.py
backend_django/apps/data_sources/migrations/: 0001_initial.py  0002_added_dbtproject_model.py  0003_changed_account_id_to_bigint.py  0004_api_key_to_ssm.py  0005_dbtproject_github_branch_and_more.py
backend_django/apps/embeddings/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend_django/apps/embeddings/migrations/: 0002_modelembedding_organisation.py  0002_update_embedding_dimensions.py  0003_remove_modelembedding_model_name_and_more.py  0004_modelembedding_is_processing.py  0005_merge_20250618_0949.py
backend_django/apps/integrations/: admin.py  constants.py  manager.py  models.py  oauth_server.py  serializers.py  urls.py  views.py
backend_django/apps/integrations/github/: views.py
backend_django/apps/integrations/management/commands/: cleanup_oauth.py
backend_django/apps/integrations/metabase/: client.py
backend_django/apps/integrations/migrations/: 0001_initial.py  0002_alter_organisationintegration_options_and_more.py  0002_populate_integration_keys.py  0003_merge_20250622_1806.py  0004_replace_credentials_with_path.py  0005_alter_organisationintegration_credentials_path.py  0006_mcpoauthauthorizationrequest_mcpoauthclient_and_more.py
backend_django/apps/integrations/slack/: handlers.py  views.py
backend_django/apps/knowledge_base/: admin.py  models.py  serializers.py  tasks.py  views.py
backend_django/apps/knowledge_base/management/commands/: interpret_models.py
backend_django/apps/knowledge_base/migrations/: 0001_initial.py  0002_model_organisation.py  0003_model_dbt_project.py  0004_fix_model_uniqueness_constraints.py
backend_django/apps/llm_providers/: apps.py  services.py
backend_django/apps/mcp_server/: auth.py  config.py  main.py  oauth_server.py  prompts.py  resources.py  tools.py  urls.py  views.py
backend_django/apps/waitlist/: models.py  serializers.py  urls.py  views.py
backend_django/apps/waitlist/migrations/: 0001_initial.py  0002_waitlistentry_company_waitlistentry_name_and_more.py
backend_django/apps/whitelist/: admin.py  apps.py  models.py
backend_django/apps/whitelist/migrations/: 0001_initial.py
backend_django/apps/workflows/: blockkit_renderer.py  message_schema.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend_django/apps/workflows/knowledge_extractor/: workflow.py
backend_django/apps/workflows/migrations/: 0001_initial.py  0002_question_organisation.py  0002_update_embedding_dimensions.py  0003_merge_20250618_0949.py  0004_conversation_conversationpart_and_more.py  0005_add_actor_message_type_fields.py  0006_conversation_conversatio_organis_390fd3_idx_and_more.py  0007_conversationpart_result_summary_and_more.py  0008_conversation_llm_chat_model.py
backend_django/apps/workflows/model_interpreter/: __init__.py  prompts.py  workflow.py
backend_django/apps/workflows/prompts/: common.py
backend_django/apps/workflows/query_executor/: prompts.py  workflow.py
backend_django/apps/workflows/question_answerer/: prompts.py  workflow.py
backend_django/apps/workflows/slack_responder/: prompts.py  workflow.py
backend_django/apps/workflows/sql_verifier/: workflow.py
backend_django/ragstar/: asgi.py  celery.py  settings.py  urls.py
config_examples/: .ragstarrules.example.yml  .slack_manifest.example.json
dbt_llm_agent/: __init__.py  cli.py
dbt_llm_agent/api/: __init__.py  server.py
dbt_llm_agent/commands/: __init__.py  ask_cmd.py  db_cmd.py  embed_cmd.py  feedback_cmd.py  init_cmd.py  interpret_cmd.py  list_cmd.py  model_details_cmd.py  parse_cmd.py  questions_cmd.py  utils.py  version_cmd.py
dbt_llm_agent/core/: __init__.py  agent.py  config.py  dbt_parser.py  model.py  models.py
dbt_llm_agent/integrations/: __init__.py  embedding.py  (+1 more)
docs/: index.html
frontend_nextjs/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
mcp_server/: Dockerfile  __init__.py  auth.py  config.py  main.py  prompts.py  pyproject.toml  resources.py  test_mcp.py  tools.py
migrations/: README.md  env.py  script.py.mako
ragstar/: __init__.py  asgi.py  cli.py  entrypoint.sh  settings.py  urls.py  wsgi.py
(+188 files in other folders)
