[tool.poetry]
name = "dbt-llm-agent"
version = "0.4.0"
description = "An LLM-powered agent for interacting with dbt projects"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "dbt_llm_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
markdown = "^3.4.0"
openai = "^1.5.0"
dbt-core = "^1.6.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
langchain = "^0.3.2"
langchain-openai = "^0.3.8"
pydantic = "2.10.1"
python-dotenv = "^1.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.25.0"
slack-sdk = "^3.23.0"
slack-bolt = "^1.18.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
alembic = "^1.13.1"
sqlglot = "^26.12.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-llm-agent = "dbt_llm_agent.cli:main" 