[tool.poetry]
name = "ragstar"
version = "0.8.2"
description = "An LLM-powered agent for interacting with dbt projects"
authors = ["Pragun Bhutani <pragunbhutani.com>"]
readme = "README.md"
packages = [{include = "ragstar"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
markdown = "^3.4.0"
openai = "^1.5.0"
dbt-core = "^1.6.0"
sqlalchemy = "^2.0.23"
psycopg-binary = "^3.1.18"
pgvector = "^0.2.5"
langchain = "^0.3.2"
langchain-openai = "^0.3.8"
pydantic = "2.10.1"
python-dotenv = "^1.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.25.0"
slack-sdk = "^3.23.0"
slack-bolt = "^1.18.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
alembic = "^1.13.1"
sqlglot = "^26.12.0"
requests = "^2.32.3"
rich = "^14.0.0"
langgraph = "^0.3.25"
psycopg-pool = "^3.2.6"
langgraph-checkpoint-postgres = "^2.0.19"
aiohttp = "^3.11.16"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ragstar = "ragstar.cli:main" 
