[project]
name = "mcp-server"
version = "0.1.0"
description = "Standalone MCP server for Ragstar"
authors = [
  { name = "Ragstar" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "asgiref>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "auth"] 